conexão com o banco de dados

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SQLServer": "Server=localhost\\SQLEXPRESS01; Initial Catalog=DbEstudos; Integrated Security=SSPI;TrustServerCertificate=True"
+  }
 }
